Minor changes to csp notebook

--- a/notebooks/ConstraintSatisfactionProblems.ipynb
+++ b/notebooks/ConstraintSatisfactionProblems.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dddfaf0-1727-4894-bf35-4c6129048bdf",
+       "model_id": "8e1457f0-10e0-4a54-87eb-7883e9f5e01b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,7 +123,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -184,7 +183,8 @@
     "    public static final Variable SA = new Variable(\"SA\");\n",
     "    public static final Variable T = new Variable(\"T\");\n",
     "    \n",
-    "    public static final List<Variable> list = Arrays.asList(WA, NT, Q, NSW, V, SA, T);\n",
+    "    public static final List<Variable> list = \n",
+    "        Arrays.asList(WA, NT, Q, NSW, V, SA, T);\n",
     "    \n",
     "    private Variables() {}\n",
     "}"
@@ -250,7 +250,8 @@
     "import java.util.ArrayList;\n",
     "\n",
     "public class Domains {\n",
-    "    private static final List<String> commonDomain = Arrays.asList(Values.RED, Values.GREEN, Values.BLUE);\n",
+    "    private static final List<String> commonDomain =\n",
+    "        Arrays.asList(Values.RED, Values.GREEN, Values.BLUE);\n",
     "    public static final Domain<String> WA = new Domain(new ArrayList<String>(commonDomain));\n",
     "    public static final Domain<String> NT = new Domain(new ArrayList<String>(commonDomain));\n",
     "    public static final Domain<String> Q = new Domain(new ArrayList<String>(commonDomain));\n",
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +287,7 @@
        "aima.notebooks.csp.AllDiffConstraint"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +304,8 @@
     "import java.util.ArrayList;\n",
     "import java.util.HashSet;\n",
     "\n",
-    "public class AllDiffConstraint<VAR extends Variable, VAL> implements Constraint<VAR, VAL>, Cloneable {\n",
+    "public class AllDiffConstraint<VAR extends Variable, VAL> implements \n",
+    "    Constraint<VAR, VAL>, Cloneable {\n",
     "    \n",
     "    private List<VAR> variables;\n",
     "    \n",
@@ -344,7 +346,8 @@
     "    public List<NotEqualConstraint> toNotEqualConstraint() {\n",
     "        List<NotEqualConstraint> constraints = new ArrayList();\n",
     "        CombinationGenerator.generateCombinations(variables, 2).forEach(\n",
-    "            list -> constraints.add(new NotEqualConstraint(list.get(0), list.get(1)))\n",
+    "            list ->\n",
+    "            constraints.add(new NotEqualConstraint(list.get(0), list.get(1)))\n",
     "        );\n",
     "        return constraints;\n",
     "    }\n",
@@ -390,7 +393,8 @@
     "\n",
     "AllDiffConstraint alldiff = new AllDiffConstraint(Variables.list);\n",
     "\n",
-    "return alldiff.isSatisfiedWith(assignment) + \", \" + alldiff.isSatisfiedWith(nonConsistentAssignment);"
+    "return alldiff.isSatisfiedWith(assignment) + \", \" \n",
+    "    + alldiff.isSatisfiedWith(nonConsistentAssignment);"
    ]
   },
   {
@@ -424,11 +428,12 @@
     "import java.util.Arrays;\n",
     "\n",
     "public class Constraints {\n",
-    "    public static final List<AllDiffConstraint> list = Arrays.asList(\n",
-    "        new AllDiffConstraint(Arrays.asList(WA, NT, SA)),\n",
-    "        new AllDiffConstraint(Arrays.asList(NT, SA, Q)),\n",
-    "        new AllDiffConstraint(Arrays.asList(SA, Q, NSW)),\n",
-    "        new AllDiffConstraint(Arrays.asList(SA, NSW, V))\n",
+    "    public static final List<AllDiffConstraint> list =\n",
+    "        Arrays.asList(\n",
+    "            new AllDiffConstraint(Arrays.asList(WA, NT, SA)),\n",
+    "            new AllDiffConstraint(Arrays.asList(NT, SA, Q)),\n",
+    "            new AllDiffConstraint(Arrays.asList(SA, Q, NSW)),\n",
+    "            new AllDiffConstraint(Arrays.asList(SA, NSW, V))\n",
     "    );\n",
     "    private Constraints() {}\n",
     "}"
@@ -473,7 +478,8 @@
     "        super(Variables.list);\n",
     "        Iterator<Domain> domainIter = Domains.list.listIterator();\n",
     "        Variables.list.forEach(\n",
-    "            variable -> super.setDomain(variable, domainIter.next())\n",
+    "            variable -> \n",
+    "            super.setDomain(variable, domainIter.next())\n",
     "        );\n",
     "        Constraints.list.forEach(super::addConstraint);\n",
     "    }\n",
@@ -492,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -500,17 +506,13 @@
      "output_type": "stream",
      "text": [
       "Constraints = [AD(WA, NT, SA), AD(NT, SA, Q), AD(SA, Q, NSW), AD(SA, NSW, V)]\n",
-      "-----------------------------------------------------------------------------------------------------\n",
-      "| VARIABLES |      DOMAINS       |                    CORRESPONDING CONSTRAINTS                     |\n",
-      "-----------------------------------------------------------------------------------------------------\n",
-      "| WA        | {red, green, blue} | [AD(WA, NT, SA)]                                                 |\n",
-      "| NT        | {red, green, blue} | [AD(WA, NT, SA), AD(NT, SA, Q)]                                  |\n",
-      "| Q         | {red, green, blue} | [AD(NT, SA, Q), AD(SA, Q, NSW)]                                  |\n",
-      "| NSW       | {red, green, blue} | [AD(SA, Q, NSW), AD(SA, NSW, V)]                                 |\n",
-      "| V         | {red, green, blue} | [AD(SA, NSW, V)]                                                 |\n",
-      "| SA        | {red, green, blue} | [AD(WA, NT, SA), AD(NT, SA, Q), AD(SA, Q, NSW), AD(SA, NSW, V)]  |\n",
-      "| T         | {red, green, blue} | []                                                               |\n",
-      "-----------------------------------------------------------------------------------------------------\n"
+      "(WA, {red, green, blue}, [AD(WA, NT, SA)])\n",
+      "(NT, {red, green, blue}, [AD(WA, NT, SA), AD(NT, SA, Q)])\n",
+      "(Q, {red, green, blue}, [AD(NT, SA, Q), AD(SA, Q, NSW)])\n",
+      "(NSW, {red, green, blue}, [AD(SA, Q, NSW), AD(SA, NSW, V)])\n",
+      "(V, {red, green, blue}, [AD(SA, NSW, V)])\n",
+      "(SA, {red, green, blue}, [AD(WA, NT, SA), AD(NT, SA, Q), AD(SA, Q, NSW), AD(SA, NSW, V)])\n",
+      "(T, {red, green, blue}, [])\n"
      ]
     },
     {
@@ -519,7 +521,7 @@
        "null"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,16 +534,11 @@
     "\n",
     "MapCSP mapCSP = new MapCSP();\n",
     "System.out.println(\"Constraints = \" + mapCSP.getConstraints());\n",
-    "String line = new String(new char[101]).replace('\\0', '-');\n",
-    "System.out.println(line);\n",
-    "System.out.format(\"| %-9S | %18S |%66S|\\n\", \"variables\", StringUtils.center(\"domains\", 18),\n",
-    "                  StringUtils.center(\"corresponding constraints\", 66));\n",
-    "System.out.println(line);\n",
     "mapCSP.getVariables().forEach(\n",
-    "    var -> System.out.format(\"| %-9s | %-18s | %-64s |%n\", var, \n",
-    "                             mapCSP.getDomain(var), mapCSP.getConstraints(var))\n",
-    ");\n",
-    "System.out.println(line);"
+    "    var -> System.out.format(\"(%s, %s, %s)%n\", var, \n",
+    "                             mapCSP.getDomain(var),\n",
+    "                             mapCSP.getConstraints(var))\n",
+    ");"
    ]
   },
   {
@@ -679,7 +676,8 @@
     "        return Arrays.asList(x, y);\n",
     "    }\n",
     "    public boolean isSatisfiedWith(Assignment<Variable, Integer> assignment) {\n",
-    "        return assignment.getValue(y) == assignment.getValue(x) * assignment.getValue(x);\n",
+    "        return assignment.getValue(y) == \n",
+    "            assignment.getValue(x) * assignment.getValue(x);\n",
     "    }\n",
     "});\n",
     "\n",
@@ -691,7 +689,8 @@
     "System.out.format(\"| %-12S | %-15S |%n\",\"variable\",\"domain\");\n",
     "System.out.println(line);\n",
     "for (Variable var: csp.getVariables()) {\n",
-    "    System.out.format(\"| %-12S | %-15S |%n\", var.getName(),csp.getDomain(var));\n",
+    "    System.out.format(\"| %-12S | %-15S |%n\", \n",
+    "                      var.getName(),csp.getDomain(var));\n",
     "}\n",
     "System.out.println(line);"
    ]
